# wussup

./: Cargo.toml  README.md  example_config.yaml
migrations/: 0001_platforms.sql  0002_builds.sql  0003_files.sql  0003_settings.sql  0004_sessions.sql  0004_settings.sql  0004_tokens.sql  0005_files.sql
src/: cli.rs  config.rs  lib.rs  main.rs
src/api/: context.rs  mod.rs
src/api/rest/: mod.rs  prelude.rs
src/api/rest/handlers/: auth.rs  file.rs  health_check.rs  mod.rs  settings.rs
src/api/rest/models/: auth.rs  file.rs  mod.rs  settings.rs
src/api/rest/models/settings/: common.rs  create.rs  delete.rs  get.rs  mod.rs  update.rs
src/api/rest/requests/: auth.rs  settings.rs
src/api/rest/responses/: auth.rs  file.rs  mod.rs  settings.rs
src/api/rest/routes/: auth.rs  file.rs  health_check.rs  middleware.rs  mod.rs  settings.rs
src/models/: auth.rs  build.rs  file.rs  mod.rs  platform.rs  settings.rs
src/repos/: auth.rs  error.rs  file.rs  mod.rs  prelude.rs  settings.rs
src/services/: auth.rs  error.rs  file.rs  local_prelude.rs  mod.rs  prelude.rs  settings.rs  utils.rs
