[package]
name = "wussup"
version = "0.1.0"
authors = ["avpyatn2 <avpyatn2@mts.ru>"]
edition = "2018"

[lib]
name = "wussup_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
config = "0.10"
http = "0.2"
http-api-problem = { version = "0.21.0", features = ["default", "api-error", "warp"] }
log = { version = "0.4", features = ["std", "serde"] }
log4rs = "1.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
warp = "0.3"