[package]
name = "wussup"
version = "0.1.0"
authors = ["avpyatn2 <avpyatn2@mts.ru>"]
edition = "2018"

[lib]
name = "wussup_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
config = "0.10"
cookie = "0.15"
clap = "3.0.0-beta.2"
http = "0.2"
http-api-problem = { version = "0.21.0", features = ["default", "api-error", "warp"] }
jsonwebtoken = "7"
log = { version = "0.4", features = ["std", "serde"] }
log4rs = "1.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
sqlx = { version = "0.5", features = [ "macros", "runtime-tokio-native-tls", "postgres", "uuid", "chrono" ] }
time = "0.2"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
futures = "0.3"
warp = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }